# ENPM667_Project1

./: LICENSE  README.md  main.py  pyproject.toml
data/: cfc_grid.npz  flc_grid_coarse.npz  robot_single.csv  support_single.csv  workpiece_center.csv
src/control_performance/: cfc.py  cfc_flc_comparison.py  cfc_flc_system.py  cfc_sim.py  flc.py  flc_sim.py
src/stiffness_analysis/: kr_robot.py  ks_support.py  kw_workpiece.py
